--- a/starter-code/memory.html
+++ b/starter-code/memory.html
@@ -2,11 +2,11 @@
 <html>
     <head>
        <title>Superhero Memory Game</title>
-       <link type="text/css" rel="stylesheet" href="memory.css" media="screen">
+       <link type="text/css" rel="stylesheet" href="./memory.css" media="screen">
     </head>
     <body>
         <div>
-          <h1>Superhero Memory Game</h1>
+          <h1>SUPERHERO MEMORY GAME</h1>
         </div>
         <div id="score">
           <h2>Score</h2>
